--- a/src/output.css
+++ b/src/output.css
@@ -570,6 +570,18 @@ video {
   inset: 0px;
 }
 
+.inset-2\/4 {
+  inset: 50%;
+}
+
+.inset-3\/4 {
+  inset: 75%;
+}
+
+.left-1\/4 {
+  left: 25%;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -582,6 +594,10 @@ video {
   right: 10rem;
 }
 
+.right-5 {
+  right: 1.25rem;
+}
+
 .right-56 {
   right: 14rem;
 }
@@ -590,8 +606,20 @@ video {
   top: 0px;
 }
 
+.top-20 {
+  top: 5rem;
+}
+
+.top-28 {
+  top: 7rem;
+}
+
 .top-3 {
   top: 0.75rem;
+}
+
+.top-48 {
+  top: 12rem;
 }
 
 .z-10 {
@@ -601,6 +629,19 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-152 {
+  margin-top: 152px;
+  margin-bottom: 152px;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
+.mb-95 {
+  margin-bottom: 95px;
 }
 
 .ml-0 {
@@ -629,6 +670,10 @@ video {
 
 .mt-12 {
   margin-top: 3rem;
+}
+
+.mt-152 {
+  margin-top: 152px;
 }
 
 .mt-16 {
@@ -675,12 +720,26 @@ video {
   width: 100%;
 }
 
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.max-w-fit {
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+}
+
 .flex-grow {
   flex-grow: 1;
 }
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-nowrap {
+  flex-wrap: nowrap;
 }
 
 .items-center {
@@ -697,6 +756,11 @@ video {
 
 .gap-2 {
   gap: 0.5rem;
+}
+
+.gap-x-6 {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
 }
 
 .gap-x-8 {
@@ -743,14 +807,29 @@ video {
   --tw-bg-opacity: 0.5;
 }
 
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .py-1 {
@@ -763,6 +842,16 @@ video {
   padding-bottom: 0.375rem;
 }
 
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -773,12 +862,41 @@ video {
   padding-bottom: 1rem;
 }
 
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.pb-32 {
+  padding-bottom: 8rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
 .text-left {
   text-align: left;
 }
 
 .text-center {
   text-align: center;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-4xl {
@@ -826,81 +944,22 @@ video {
   opacity: 0.7;
 }
 
+body {
+  overflow-x: hidden;
+  padding: 0;
+  background-color: black;
+  color: #FFFFFF;
+  max-width: 1600px;
+  text-align: center;
+  height: 1600vh;
+  margin: auto;
+}
+
 .outfit {
   font-family: "Outfit", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
-}
-
-body {
-  margin: 0%;
-  padding: 0;
-  background-color: black;
-  color: #FFFFFF;
-  font-family: Outfit;
-  max-width: 1600px;
-  text-align: center;
-  height: 600vh;
-  margin: auto;
-  header {
-    .aigen {
-      letter-spacing: 0.5em;
-    }
-  }
-  section.homepage {
-    div {
-      text-align: left;
-      h1 {
-        font-family: Outfit;
-        font-size: 48px;
-        font-weight: 500;
-        line-height: 59px;
-        text-align: left;
-      }
-      p {
-        font-family: Outfit;
-        font-size: 24px;
-        font-weight: 400;
-        line-height: 40px;
-        text-align: left;
-      }
-      .styledbtn {
-        font-family: Outfit;
-        font-size: 24px;
-        font-weight: 400;
-        line-height: 24px;
-        text-align: left;
-      }
-    }
-  }
-  section.text-on-img {
-    div {
-      .image-container:nth-child(odd) {
-        margin-top: 63px;
-      }
-    }
-    div {
-      h1 {
-        font-family: Outfit;
-        font-size: 48px;
-        font-weight: 400;
-        line-height: 64px;
-        text-align: center;
-      }
-    }
-  }
-  section.avatar {
-    div {
-      h1 {
-        font-family: Outfit;
-        font-size: 64px;
-        font-weight: 600;
-        line-height: 64px;
-        text-align: left;
-      }
-    }
-  }
 }
 
 .border-grey {
@@ -922,7 +981,63 @@ span {
           background-clip: text;
 }
 
-h2 {
+header {
+  .aigen {
+    letter-spacing: 0.5em;
+  }
+}
+
+section.homepage {
+  div {
+    text-align: left;
+    h1,
+        p,
+        .styledbtn {
+      font-family: Outfit;
+      font-size: 48px;
+      font-weight: 500;
+      line-height: 59px;
+      text-align: left;
+    }
+    .styledbtn,
+        p {
+      font-size: 24px;
+      font-weight: 400;
+      line-height: 40px;
+    }
+    .styledbtn {
+      line-height: 24px;
+    }
+  }
+}
+
+section.text-on-img {
+  div {
+    .image-container:nth-child(odd) {
+      margin-top: 63px;
+    }
+  }
+  div {
+    h1 {
+      font-family: Outfit;
+      font-size: 48px;
+      font-weight: 400;
+      line-height: 64px;
+      text-align: center;
+    }
+  }
+}
+
+/* -------------------- Avatar ------------------------ */
+
+section.avatar>div>h1 {
+  font-size: 64px;
+  font-weight: 600;
+  line-height: 64px;
+  text-align: left;
+}
+
+section.avatar>div>h2 {
   font-family: Outfit;
   font-size: 48px;
   font-weight: 400;
@@ -931,7 +1046,7 @@ h2 {
   color: rgba(255, 255, 255, 0.3);
 }
 
-@keyframes colorChangeH2_1 {
+@keyframes color-blue-transition-1 {
   0%,
     19.99% {
     color: rgba(255, 255, 255, 0.3);
@@ -951,7 +1066,7 @@ h2 {
   }
 }
 
-@keyframes colorChangeH2_2 {
+@keyframes color-blue-transition-2 {
   0%,
     39.99% {
     color: rgba(255, 255, 255, 0.3);
@@ -971,7 +1086,7 @@ h2 {
   }
 }
 
-@keyframes colorChangeH2_3 {
+@keyframes color-blue-transition-3 {
   0%,
     59.99% {
     color: rgba(255, 255, 255, 0.3);
@@ -991,7 +1106,7 @@ h2 {
   }
 }
 
-@keyframes colorChangeH2_4 {
+@keyframes color-blue-transition-4 {
   0%,
     79.99% {
     color: rgba(255, 255, 255, 0.3);
@@ -1011,20 +1126,129 @@ h2 {
   }
 }
 
-h2:nth-of-type(1) {
-  animation: colorChangeH2_1 10s ease-in-out infinite;
+section.avatar>div>h2:nth-of-type(1) {
+  animation: color-blue-transition-1 1s ease-in-out forwards;
 }
 
-h2:nth-of-type(2) {
-  animation: colorChangeH2_2 10s ease-in-out infinite;
+section.avatar>div>h2:nth-of-type(2) {
+  animation: color-blue-transition-2 3s ease-in-out forwards;
 }
 
-h2:nth-of-type(3) {
-  animation: colorChangeH2_3 10s ease-in-out infinite;
+section.avatar>div>h2:nth-of-type(3) {
+  animation: color-blue-transition-3 4s ease-in-out forwards;
 }
 
-h2:nth-of-type(4) {
-  animation: colorChangeH2_4 10s ease-in-out infinite;
+section.avatar>div>h2:nth-of-type(4) {
+  animation: color-blue-transition-4 7s ease-in-out forwards;
 }
 
+/*---------------------------------- SLIDER -------------------------------------*/
 
+.right-to-left {
+  animation: left-right 2s reverse ease-in-out infinite;
+}
+
+.left-to-right {
+  animation: left-right 2s ease-in-out infinite;
+}
+
+@keyframes left-right {
+  0% {
+    transform: translateX(30px, 0);
+  }
+
+  100% {
+    transform: translateX(90px);
+  }
+
+  0% {
+    transform: translateX(90px);
+  }
+
+  100% {
+    transform: translateX(30px);
+  }
+}
+
+.slider {
+  font-family: Outfit;
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 48px;
+  text-align: left;
+}
+
+.gradient-bg-3 {
+  background: linear-gradient(92.05deg, rgba(128, 47, 126, 0.7) 0%, rgba(255, 255, 255, 0.1) 100%);
+}
+
+.gradient-bg-1 {
+  background: linear-gradient(91.84deg, rgba(128, 47, 126, 0.7) 0%, rgba(255, 255, 255, 0.1) 100%);
+}
+
+.gradient-bg-2 {
+  background: linear-gradient(92.08deg, rgba(43, 91, 117, 0.7) 0%, rgba(255, 255, 255, 0.09) 100%);
+}
+
+.gradient-bg-4 {
+  background: linear-gradient(92.05deg, rgba(128, 47, 126, 0.7) 0%, rgba(255, 255, 255, 0.1) 100%);
+}
+
+.gradient-bg-5 {
+  background: linear-gradient(92.5deg, rgba(88, 61, 128, 0.7) 0%, rgba(255, 255, 255, 0.09) 100%);
+}
+
+.gradient-bg-6 {
+  background: linear-gradient(91.85deg, rgba(122, 70, 79, 0.7) 0%, rgba(255, 255, 255, 0.09) 100%);
+}
+
+.gradient-bg-4 {
+  background: linear-gradient(90.9deg, rgba(255, 255, 255, 0.1) 0%, rgba(128, 47, 126, 0.7) 100%);
+}
+
+.gradient-bg-7 {
+  background: linear-gradient(90.9deg, rgba(255, 255, 255, 0.1) 0%, rgba(128, 47, 126, 0.7) 100%);
+}
+
+.gradient-bg-8 {
+  background: linear-gradient(91.77deg, rgba(255, 255, 255, 0.09) 0%, rgba(88, 61, 128, 0.7) 100%);
+}
+
+/* -----------------------------------Grid Section---------------------- */
+
+.red-shoe {
+  height: 40vh;
+  -o-object-fit: contain;
+     object-fit: contain;
+  left: 94.43px;
+  transform-origin: center;
+  transform: rotate(-6.79deg);
+}
+
+.rectangle {
+  background: #FF9999;
+  width: 463px;
+  height: 208px;
+  top: 150.91px;
+  left: 31.5px;
+  gap: 0px;
+  border-radius: 18px 18px 0px 0px;
+  /* opacity: 0px; */
+}
+
+section.image-grid>div>div>div>p{
+  font-family: Outfit;
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 48px;
+  text-align: center;
+}
+
+section.image-grid>div>div{
+  border-radius: 24px;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.14) 0%, rgba(153, 56, 67, 0.25) 100%);
+}
+
+.large-container{
+  background: rgba(255, 255, 255, 0.08);
+}
