--- a/src/styles.css
+++ b/src/styles.css
@@ -3,111 +3,22 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    overflow-x: hidden;
+    padding: 0;
+    background-color: black;
+    color: #FFFFFF;
+    max-width: 1600px;
+    text-align: center;
+    height: 1600vh;
+    margin: auto;
+}
+
 .outfit {
     font-family: "Outfit", sans-serif;
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
-}
-
-
-body {
-    margin: 0%;
-    padding: 0;
-    background-color: black;
-    color: #FFFFFF;
-    font-family: Outfit;
-    max-width: 1600px;
-    text-align: center;
-    height: 600vh;
-    margin: auto;
-
-
-    header {
-        .aigen {
-            letter-spacing: 0.5em;
-        }
-    }
-
-    section.homepage {
-
-
-
-        div {
-            text-align: left;
-
-            h1 {
-                font-family: Outfit;
-                font-size: 48px;
-                font-weight: 500;
-                line-height: 59px;
-                text-align: left;
-
-
-            }
-
-            p {
-                font-family: Outfit;
-                font-size: 24px;
-                font-weight: 400;
-                line-height: 40px;
-                text-align: left;
-
-            }
-
-
-            .styledbtn {
-                font-family: Outfit;
-                font-size: 24px;
-                font-weight: 400;
-                line-height: 24px;
-                text-align: left;
-            }
-        }
-
-
-
-    }
-
-    section.text-on-img {
-        div {
-            .image-container:nth-child(odd) {
-                margin-top: 63px;
-            }
-
-        }
-
-        div {
-            h1 {
-                font-family: Outfit;
-                font-size: 48px;
-                font-weight: 400;
-                line-height: 64px;
-                text-align: center;
-            }
-
-        }
-
-    }
-
-
-    section.avatar {
-        div {
-
-            h1 {
-
-                font-family: Outfit;
-                font-size: 64px;
-                font-weight: 600;
-                line-height: 64px;
-                text-align: left;
-            }
-
-
-        }
-
-    }
-
 }
 
 
@@ -134,7 +45,80 @@ span {
 }
 
 
-h2 {
+
+header {
+    .aigen {
+        letter-spacing: 0.5em;
+    }
+}
+
+section.homepage {
+
+    div {
+        text-align: left;
+
+        h1,
+        p,
+        .styledbtn {
+            font-family: Outfit;
+            font-size: 48px;
+            font-weight: 500;
+            line-height: 59px;
+            text-align: left;
+
+
+        }
+
+        .styledbtn,
+        p {
+            font-size: 24px;
+            font-weight: 400;
+            line-height: 40px;
+
+        }
+
+
+        .styledbtn {
+            line-height: 24px;
+        }
+    }
+}
+
+section.text-on-img {
+    div {
+        .image-container:nth-child(odd) {
+            margin-top: 63px;
+        }
+
+    }
+
+    div {
+        h1 {
+            font-family: Outfit;
+            font-size: 48px;
+            font-weight: 400;
+            line-height: 64px;
+            text-align: center;
+        }
+
+    }
+
+}
+
+
+/* -------------------- Avatar ------------------------ */
+
+
+section.avatar>div>h1 {
+    font-size: 64px;
+    font-weight: 600;
+    line-height: 64px;
+    text-align: left;
+}
+
+
+
+section.avatar>div>h2 {
     font-family: Outfit;
     font-size: 48px;
     font-weight: 400;
@@ -143,7 +127,7 @@ h2 {
     color: rgba(255, 255, 255, 0.3);
 }
 
-@keyframes colorChangeH2_1 {
+@keyframes color-blue-transition-1 {
 
     0%,
     19.99% {
@@ -163,7 +147,7 @@ h2 {
     }
 }
 
-@keyframes colorChangeH2_2 {
+@keyframes color-blue-transition-2 {
 
     0%,
     39.99% {
@@ -183,7 +167,7 @@ h2 {
     }
 }
 
-@keyframes colorChangeH2_3 {
+@keyframes color-blue-transition-3 {
 
     0%,
     59.99% {
@@ -203,7 +187,7 @@ h2 {
     }
 }
 
-@keyframes colorChangeH2_4 {
+@keyframes color-blue-transition-4 {
 
     0%,
     79.99% {
@@ -223,20 +207,150 @@ h2 {
     }
 }
 
-h2:nth-of-type(1) {
-    animation: colorChangeH2_1 10s ease-in-out infinite;
+section.avatar>div>h2:nth-of-type(1) {
+    animation: color-blue-transition-1 1s ease-in-out forwards;
 }
 
-h2:nth-of-type(2) {
-    animation: colorChangeH2_2 10s ease-in-out infinite;
+section.avatar>div>h2:nth-of-type(2) {
+    animation: color-blue-transition-2 3s ease-in-out forwards;
 }
 
-h2:nth-of-type(3) {
-    animation: colorChangeH2_3 10s ease-in-out infinite;
+section.avatar>div>h2:nth-of-type(3) {
+    animation: color-blue-transition-3 4s ease-in-out forwards;
 }
 
-h2:nth-of-type(4) {
-    animation: colorChangeH2_4 10s ease-in-out infinite;
+section.avatar>div>h2:nth-of-type(4) {
+    animation: color-blue-transition-4 7s ease-in-out forwards;
 }
 
 
+
+
+
+/*---------------------------------- SLIDER -------------------------------------*/
+.right-to-left {
+    animation: left-right 2s reverse ease-in-out infinite;
+}
+
+.left-to-right {
+    animation: left-right 2s ease-in-out infinite;
+}
+
+
+@keyframes left-right {
+    0% {
+        transform: translateX(30px, 0);
+    }
+
+    100% {
+
+        transform: translateX(90px);
+    }
+}
+
+@keyframes left-right {
+    0% {
+        transform: translateX(90px);
+    }
+
+    100% {
+
+        transform: translateX(30px);
+    }
+}
+
+.slider {
+    font-family: Outfit;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 48px;
+    text-align: left;
+
+}
+
+.gradient-bg-3 {
+    background: linear-gradient(92.05deg, rgba(128, 47, 126, 0.7) 0%, rgba(255, 255, 255, 0.1) 100%);
+}
+
+.gradient-bg-1 {
+    background: linear-gradient(91.84deg, rgba(128, 47, 126, 0.7) 0%, rgba(255, 255, 255, 0.1) 100%);
+
+}
+
+.gradient-bg-2 {
+    background: linear-gradient(92.08deg, rgba(43, 91, 117, 0.7) 0%, rgba(255, 255, 255, 0.09) 100%);
+}
+
+.gradient-bg-4 {
+    background: linear-gradient(92.05deg, rgba(128, 47, 126, 0.7) 0%, rgba(255, 255, 255, 0.1) 100%);
+}
+
+.gradient-bg-5 {
+    background: linear-gradient(92.5deg, rgba(88, 61, 128, 0.7) 0%, rgba(255, 255, 255, 0.09) 100%);
+
+}
+
+.gradient-bg-6 {
+    background: linear-gradient(91.85deg, rgba(122, 70, 79, 0.7) 0%, rgba(255, 255, 255, 0.09) 100%);
+
+}
+
+.gradient-bg-4 {
+    background: linear-gradient(90.9deg, rgba(255, 255, 255, 0.1) 0%, rgba(128, 47, 126, 0.7) 100%);
+}
+
+.gradient-bg-7 {
+    background: linear-gradient(90.9deg, rgba(255, 255, 255, 0.1) 0%, rgba(128, 47, 126, 0.7) 100%);
+}
+
+.gradient-bg-8 {
+    background: linear-gradient(91.77deg, rgba(255, 255, 255, 0.09) 0%, rgba(88, 61, 128, 0.7) 100%);
+
+}
+
+
+
+
+
+/* -----------------------------------Grid Section---------------------- */
+
+.red-shoe {
+    height: 40vh;
+object-fit: contain;
+    left: 94.43px;
+    transform-origin: center;
+    transform: rotate(-6.79deg);
+}
+
+.rectangle {
+    background: #FF9999;
+    width: 463px;
+    height: 208px;
+    top: 150.91px;
+    left: 31.5px;
+    gap: 0px;
+    
+    border-radius: 18px 18px 0px 0px;
+    /* opacity: 0px; */
+
+}
+
+
+section.image-grid>div>div>div>p{
+    font-family: Outfit;
+font-size: 36px;
+font-weight: 400;
+line-height: 48px;
+text-align: center;
+
+
+}
+section.image-grid>div>div{
+border-radius: 24px;
+background: linear-gradient(180deg, rgba(255, 255, 255, 0.14) 0%, rgba(153, 56, 67, 0.25) 100%);
+}
+
+
+.large-container{
+    background: rgba(255, 255, 255, 0.08);
+}
