--- a/src/styles.css
+++ b/src/styles.css
@@ -383,8 +383,21 @@ p.inter {
     text-align: left;
 }
 
-.styledText {
+.phase1 {
     background: linear-gradient(90deg, #FACC69 0%, #FA75F8 100%);
+
+    color: transparent;
+    background-clip: text;
+}
+
+.phase2{
+    background: linear-gradient(90deg, #FF91A5 0%, #FA75F8 100%);
+    color: transparent;
+    background-clip: text;
+}
+
+.phase3{
+    background: linear-gradient(90deg, #FA75F8 0%, #9E6EE6 100%);
     color: transparent;
     background-clip: text;
 }
