--- a/src/styles.css
+++ b/src/styles.css
@@ -212,19 +212,19 @@ section.avatar>div>h2 {
 }
 
 section.avatar>div>h2:nth-of-type(1) {
-    animation: color-blue-transition-1 1s ease-in-out forwards;
+    animation: color-blue-transition-1 1s ease-in-out ;
 }
 
 section.avatar>div>h2:nth-of-type(2) {
-    animation: color-blue-transition-2 3s ease-in-out forwards;
+    animation: color-blue-transition-2 3s ease-in-out ;
 }
 
 section.avatar>div>h2:nth-of-type(3) {
-    animation: color-blue-transition-3 4s ease-in-out forwards;
+    animation: color-blue-transition-3 4s ease-in-out ;
 }
 
 section.avatar>div>h2:nth-of-type(4) {
-    animation: color-blue-transition-4 7s ease-in-out forwards;
+    animation: color-blue-transition-4 7s ease-in-out ;
 }
 
 
